add_executable(hello_triangle main.cpp)
# Vulkan/Windows sample links the editor shell (Dear ImGui through the RHI); the editor is gated to
# non-Apple in the root CMakeLists, so this link only happens on the Vulkan path.
target_link_libraries(hello_triangle PRIVATE hf_engine hf_editor)
target_compile_definitions(hello_triangle PRIVATE HF_HAS_EDITOR=1)

# --- Material graph (Slice AV): regenerate the showcase fragment shader from its *.mat.json at build
# time via the material_codegen host tool. The JSON is the source of truth; the generated HLSL is
# committed (shaders/generated/) for diff transparency + so the standalone Metal build has it without
# running the tool. Re-runs whenever the JSON, the tool, or the shared PBR core changes. -------------
set(MAT_JSON "${CMAKE_SOURCE_DIR}/assets/materials/showcase.mat.json")
set(MAT_GEN_HLSL "${CMAKE_SOURCE_DIR}/shaders/generated/mat_showcase.frag.hlsl")
add_custom_command(
  OUTPUT "${MAT_GEN_HLSL}"
  COMMAND material_codegen "${MAT_JSON}" "${MAT_GEN_HLSL}"
  DEPENDS material_codegen "${MAT_JSON}"
          "${CMAKE_SOURCE_DIR}/shaders/pbr_core.hlsli"
  COMMENT "material_codegen showcase.mat.json -> mat_showcase.frag.hlsl"
  VERBATIM)
# Slice AW: a SECOND material (different node mix) regenerated the same way; its committed HLSL is
# what Metal renders (Metal stays build-time). On Vulkan it is rendered via the RUNTIME compile path.
set(MAT2_JSON "${CMAKE_SOURCE_DIR}/assets/materials/showcase2.mat.json")
set(MAT2_GEN_HLSL "${CMAKE_SOURCE_DIR}/shaders/generated/mat_showcase2.frag.hlsl")
add_custom_command(
  OUTPUT "${MAT2_GEN_HLSL}"
  COMMAND material_codegen "${MAT2_JSON}" "${MAT2_GEN_HLSL}"
  DEPENDS material_codegen "${MAT2_JSON}"
          "${CMAKE_SOURCE_DIR}/shaders/pbr_core.hlsli"
  COMMENT "material_codegen showcase2.mat.json -> mat_showcase2.frag.hlsl"
  VERBATIM)
# Slice AZ: a THIRD material exercising the new node types (Swizzle/MakeFloat3/Power/Saturate/
# OneMinus). The multi-material showcase draws all three in one frame. Same build-time codegen path.
set(MAT3_JSON "${CMAKE_SOURCE_DIR}/assets/materials/showcase3.mat.json")
set(MAT3_GEN_HLSL "${CMAKE_SOURCE_DIR}/shaders/generated/mat_showcase3.frag.hlsl")
add_custom_command(
  OUTPUT "${MAT3_GEN_HLSL}"
  COMMAND material_codegen "${MAT3_JSON}" "${MAT3_GEN_HLSL}"
  DEPENDS material_codegen "${MAT3_JSON}"
          "${CMAKE_SOURCE_DIR}/shaders/pbr_core.hlsli"
  COMMENT "material_codegen showcase3.mat.json -> mat_showcase3.frag.hlsl"
  VERBATIM)
add_custom_target(hello_triangle_matgen DEPENDS "${MAT_GEN_HLSL}" "${MAT2_GEN_HLSL}" "${MAT3_GEN_HLSL}")
# Slice BE: the NormalMap-node material (PBROutput.normal = NormalMap(slot="normalmap")). Same
# build-time codegen path; its committed generated HLSL flows through the same DXC->SPIR-V (and
# glslc->MSL) toolchain. The --material-normal-shot showcase renders a sphere shaded by it.
set(MATNORMAL_JSON "${CMAKE_SOURCE_DIR}/assets/materials/normalmap.mat.json")
set(MATNORMAL_GEN_HLSL "${CMAKE_SOURCE_DIR}/shaders/generated/mat_normalmap.frag.hlsl")
add_custom_command(
  OUTPUT "${MATNORMAL_GEN_HLSL}"
  COMMAND material_codegen "${MATNORMAL_JSON}" "${MATNORMAL_GEN_HLSL}"
  DEPENDS material_codegen "${MATNORMAL_JSON}"
          "${CMAKE_SOURCE_DIR}/shaders/pbr_core.hlsli"
  COMMENT "material_codegen normalmap.mat.json -> mat_normalmap.frag.hlsl"
  VERBATIM)
add_custom_target(hello_triangle_matgen_normal DEPENDS "${MATNORMAL_GEN_HLSL}")
add_dependencies(hello_triangle hello_triangle_matgen hello_triangle_matgen_normal)

set(SHADER_OUT "${CMAKE_CURRENT_BINARY_DIR}/shaders")
# The ui.vert/frag shaders are Vulkan-only (editor) — added only to the Vulkan sample's compile list,
# never to the metal_headless gen list, so the Metal shader generation is untouched.
hf_compile_shaders(
  TARGET hello_triangle
  OUTPUT_DIR "${SHADER_OUT}"
  SHADERS
    "shaders/lit.vert.hlsl:vs"
    "shaders/lit.frag.hlsl:ps"
    "shaders/lit_csm.frag.hlsl:ps"
    "shaders/shadow_csm.vert.hlsl:vs"
    # Spot light + perspective spot-light shadow (Slice AE): cone-cut lit fragment + reuse the CSM
    # depth-only caster (spotViewProj in the push constant).
    "shaders/lit_spot.frag.hlsl:ps"
    # Omnidirectional point-light shadow (Slice AF): 6-face cube atlas lit fragment + reuse the CSM
    # depth-only caster (per-face view-proj in the push constant).
    "shaders/lit_point.frag.hlsl:ps"
    # Clustered / Forward+ lit fragment (Slice AG): per-fragment cluster index + iterate that
    # cluster's point lights from three fragment-stage storage buffers (set 3).
    "shaders/lit_clustered.frag.hlsl:ps"
    "shaders/lit_pbr.frag.hlsl:ps"
    "shaders/lit_pbr_ibl.frag.hlsl:ps"
    # Data-driven material graph (Slice AV): the build-time-generated fragment from
    # assets/materials/showcase.mat.json (regenerated by the hello_triangle_matgen custom command
    # above). Reuses lit.vert + the existing PBR descriptor layout; shares pbr_core.hlsli.
    "shaders/generated/mat_showcase.frag.hlsl:ps"
    # Slice AW: the SECOND material's build-time-generated fragment. On Vulkan the live/dry-run path
    # RUNTIME-compiles showcase2.mat.json; this build-time .spv is kept for parity/diagnostics + so the
    # generated HLSL is exercised by the same DXC the runtime path uses.
    "shaders/generated/mat_showcase2.frag.hlsl:ps"
    # Slice AZ: the THIRD material's build-time-generated fragment (new node types). Drawn alongside
    # showcase + showcase2 in the --material-multi-shot multi-material scene; also runtime-compiled
    # via --material-live-shot to prove the new nodes survive the dxc runtime path.
    "shaders/generated/mat_showcase3.frag.hlsl:ps"
    # Slice BE: the NormalMap-node material's build-time-generated fragment (a tangent-space normal
    # map perturbs the shading normal via the same TBN as lit.frag). Drawn by --material-normal-shot;
    # also runtime-compiled via --material-live-shot to prove the NormalMap node survives the dxc path.
    "shaders/generated/mat_normalmap.frag.hlsl:ps"
    "shaders/sky_hdr.frag.hlsl:ps"
    "shaders/lit_skinned.vert.hlsl:vs"
    "shaders/shadow_skinned.vert.hlsl:vs"
    "shaders/lit_instanced.vert.hlsl:vs"
    "shaders/shadow_instanced.vert.hlsl:vs"
    "shaders/transparent.vert.hlsl:vs"
    "shaders/transparent.frag.hlsl:ps"
    "shaders/shadow.vert.hlsl:vs"
    "shaders/shadow.frag.hlsl:ps"
    "shaders/post.vert.hlsl:vs"
    "shaders/post.frag.hlsl:ps"
    "shaders/bloom_prefilter.frag.hlsl:ps"
    "shaders/bloom_downsample.frag.hlsl:ps"
    "shaders/bloom_upsample.frag.hlsl:ps"
    "shaders/bloom_composite.frag.hlsl:ps"
    "shaders/sky.vert.hlsl:vs"
    "shaders/sky.frag.hlsl:ps"
    "shaders/particles.comp.hlsl:cs"
    "shaders/particle.vert.hlsl:vs"
    "shaders/particle.frag.hlsl:ps"
    "shaders/ui.vert.hlsl:vs"
    "shaders/ui.frag.hlsl:ps"
    # Text / HUD renderer (Slice BA): NDC pass-through vertex + atlas-coverage fragment (configurable
    # text color in a fragment push constant). Alpha-blended screen-space overlay drawn after post.
    "shaders/text.vert.hlsl:vs"
    "shaders/text.frag.hlsl:ps"
    # CPU particle / VFX emitter billboards (Slice CC): world-space camera-facing quad verts (built
    # CPU-side by vfx::BuildBillboards) projected by FrameData.viewProj, carrying a per-vertex color +
    # corner UV; the fragment computes a procedural soft round sprite (like the decal) modulated by the
    # particle color, additively blended over the lit scene. DISTINCT from the gpu-particles fountain.
    "shaders/vfx.vert.hlsl:vs"
    "shaders/vfx.frag.hlsl:ps"
    # Immediate-mode debug-draw line pipeline (Slice W): world-space line verts projected by
    # FrameData.viewProj, flat per-vertex color. LINE_LIST topology.
    "shaders/debug_line.vert.hlsl:vs"
    "shaders/debug_line.frag.hlsl:ps"
    # Virtual-geometry meshlet viz (Slice DS): per-cluster flat-color pass. The vertex shader applies
    # the per-draw model matrix + a fixed-direction Lambert and forwards the pushed hashColor(cluster)
    # color; the fragment outputs it. Behind --meshlet-viz ONLY; reuses the existing draw + push-
    # constant surface (no new RHI), no existing shader/pipeline/golden touched.
    "shaders/meshlet_viz.vert.hlsl:vs"
    "shaders/meshlet_viz.frag.hlsl:ps"
    # SSAO chain (Slice Y): view-space normal+linear-depth g-buffer prepass (static + instanced
    # vertex variants + shared fragment), hemisphere-kernel AO pass, box blur, and composite/apply.
    "shaders/gbuffer.vert.hlsl:vs"
    "shaders/gbuffer_instanced.vert.hlsl:vs"
    "shaders/gbuffer.frag.hlsl:ps"
    "shaders/ssao.frag.hlsl:ps"
    "shaders/ssao_blur.frag.hlsl:ps"
    "shaders/ssao_composite.frag.hlsl:ps"
    # Screen-space reflections (Slice AH): reuses the SSAO g-buffer (view normal + linear depth);
    # ssr.frag ray-marches the depth buffer for on-screen reflections, ssr_composite blends +
    # tonemaps. Existing gbuffer/ssao/bloom shaders + their goldens untouched.
    "shaders/ssr.frag.hlsl:ps"
    "shaders/ssr_composite.frag.hlsl:ps"
    # Depth of field (Slice CG): reuses the SSAO/SSR g-buffer (view normal + linear depth) + the resolved
    # HDR scene. dof.frag computes the thin-lens circle of confusion per pixel (render/dof.h math,
    # mirrored in-shader) and gathers a Vogel-spiral disk weighted by the scatter-as-gather BlurWeight so
    # the focal plane stays sharp while fore/background blur, then tonemaps to the swapchain. Fullscreen
    # (reuses post.vert), behind --dof-shot ONLY; existing post/ssr/ssgi shaders + goldens untouched.
    "shaders/dof.frag.hlsl:ps"
    # Per-object + camera motion blur (Slice CN): reuses the SSAO/SSR/DoF g-buffer (view normal + linear
    # depth) + the resolved HDR scene. motion_blur.frag reconstructs each pixel's view position, computes
    # the screen-space velocity from the prev/cur view-proj (render/motion_blur.h math, mirrored in-shader),
    # clamps it to maxBlurPx and gathers N taps along it weighted by the depth-aware TapWeight so moving
    # content streaks while static content stays sharp, then tonemaps. Fullscreen (reuses post.vert), behind
    # --motionblur-shot ONLY; with zero motion the gather short-circuits to a byte-identical pass-through.
    # Existing post/ssr/ssgi/dof shaders + goldens untouched.
    "shaders/motion_blur.frag.hlsl:ps"
    # Order-Independent Transparency (Slice CO): Weighted Blended OIT (McGuire & Bavoil). oit_accum.vert
    # rasterizes the transparent geometry and passes the VIEW-space linear depth; oit_accum.frag writes the
    # premultiplied-color*Weight (additive ONE,ONE accum target, RGBA16F) and oit_revealage.frag writes the
    # alpha that multiplies the revealage target (oitRevealageBlend: dst*=(1-srcAlpha)); oit_resolve.frag
    # (fullscreen, reuses post.vert) reads accum+revealage and composites oit::ResolveOver over the opaque
    # scene. render/oit.h math, mirrored in-shader. Behind --oit-shot ONLY; transparent set rendered in two
    # permuted draw orders -> byte-identical resolve (order-independence proof). Existing shaders/goldens untouched.
    "shaders/oit_accum.vert.hlsl:vs"
    "shaders/oit_accum.frag.hlsl:ps"
    "shaders/oit_revealage.frag.hlsl:ps"
    "shaders/oit_resolve.frag.hlsl:ps"
    # Parallax Occlusion Mapping (Slice CP): pom.vert mirrors lit.vert but forwards heightScale+numSteps
    # in the material push constant .zw; pom.frag builds the orthonormal TBN, rotates the view dir into
    # tangent space, ray-marches the HEIGHT texture (steep parallax + binary refine, render/pom.h
    # ParallaxUV mirrored in-shader) to a parallax-offset uv, samples albedo+normal there, applies the
    # soft pom::SelfShadow toward the sun, and lights it with the SAME directional-sun + shadow + IBL
    # model as lit.frag. Behind --pom-shot ONLY; with heightScale==0 the march/self-shadow degenerate
    # to the base uv / 1.0 -> byte-identical to the plain normal-mapped lit render. Height bound via the
    # existing BindMaterialPBR slot (t5). Existing lit/gbuffer/oit shaders + goldens untouched.
    "shaders/pom.vert.hlsl:vs"
    "shaders/pom.frag.hlsl:ps"
    # Water rendering (Slice CF): water.vert displaces a flat NxN grid by the summed Gerstner waves at a
    # FIXED time (render/water.h math, mirrored in-shader); water.frag recomputes the analytic wave
    # normal and shades a fresnel blend of a SKY reflection (reusing SkyColor) and a REFRACTED scene
    # (sampling the HDR scene-color RT + G-buffer like SSR, tinted by depth) + a sun specular glint;
    # water_composite blends lerp(scene, water.rgb, water.a) + tonemaps. Existing shaders + goldens
    # untouched.
    "shaders/water.vert.hlsl:vs"
    "shaders/water.frag.hlsl:ps"
    "shaders/water_composite.frag.hlsl:ps"
    # Ground-Truth Ambient Occlusion (Slice CR): reuses the SSAO/SSR g-buffer (view normal + linear
    # depth). gtao.frag reconstructs the view position + normal (like ssao.frag), runs the render/gtao.h
    # horizon-search visibility integral (IntegrateArc + HorizonAngle + Visibility mirrored in-shader)
    # with a baked per-pixel slice rotation, and outputs the AO factor; the EXISTING ssao_composite.frag
    # MULTIPLIES the ambient term by it (reused unchanged). Fullscreen (reuses post.vert), behind
    # --gtao-shot ONLY; with radius==0 the horizon search raises no horizon -> AO==1 -> byte-identical to
    # the no-AO render. Existing ssao/ssr shaders + their goldens untouched.
    "shaders/gtao.frag.hlsl:ps"
    # Subsurface Scattering (Slice CZ): screen-space separable SSS (Jimenez 2015). sss_mask.frag (reuses
    # gbuffer.vert) renders ONLY the flagged subsurface objects into an "SSS G-buffer" RT carrying the
    # subsurface MASK in .r + the view-space linear depth in .w. sss_blur.frag is a fullscreen pass run
    # TWICE (horizontal then vertical, a uniform selects the axis; reuses post.vert) that gathers the
    # render/sss.h diffusion profile (DiffusionWeight x DepthFalloff x mask, mirrored in-shader) along the
    # axis so the lit color of subsurface pixels softens (the translucent terminator glow); non-subsurface
    # (mask 0) pixels pass through. Reuses the scene-color RT + the mask/depth G-buffer pair via
    # BindTexturePair (no new RHI seam), behind --sss-shot ONLY; with sssStrength==0 (or sssWidth==0) the
    # kernel collapses to the center tap -> byte-identical to the non-SSS lit render. Existing
    # post/ssr/ssgi/dof/gtao shaders + goldens untouched.
    "shaders/sss_mask.frag.hlsl:ps"
    "shaders/sss_blur.frag.hlsl:ps"
    # Color Grading (Slice DB): analytic lift/gamma/gain + ASC-CDL slope/offset/power + saturation,
    # applied POST-tonemap. color_grade.frag is a fullscreen pass (reuses post.vert) that reads the
    # resolved TONEMAPPED scene color (the engine's post.frag ACES+gamma LDR result rendered into an
    # intermediate RT) and applies render/color_grade.h's Grade (LiftGammaGain + ASC_CDL + Saturate,
    # mirrored in-shader) from a small GradeParams push constant, for a cinematic look. Behind
    # --colorgrade-shot ONLY; at the IDENTITY params (lift 0/gamma 1/gain 1/slope 1/offset 0/power 1/
    # saturation 1) the grade is a pure pass-through -> byte-identical to the ungraded tonemap render.
    # Existing post/ssr/ssgi/dof/gtao/sss shaders + goldens untouched.
    "shaders/color_grade.frag.hlsl:ps"
    # Contrast-Adaptive Sharpening (Slice DF; AMD FidelityFX CAS): cas.frag is a NEW fullscreen pass
    # (reuses post.vert) that reads the resolved TONEMAPPED SDR scene color (the engine's post.frag LDR
    # result rendered into an intermediate RT), gathers the cross neighborhood (center + up/down/left/
    # right via the texel size from GetDimensions), and applies render/cas.h's CasSharpen (CasWeight +
    # CasSharpen mirrored in-shader: out = (center + w*(up+down+left+right))/(1+4w) clamped to the
    # neighborhood [min,max], the no-ringing clamp) from a small `sharpness` push constant — an adaptive
    # edge sharpen. Behind --cas-shot ONLY; at sharpness 0 CasWeight==0 -> a pure pass-through ->
    # byte-identical to the unsharpened tonemap render. Existing post/ssr/ssgi/dof/gtao/sss/colorgrade
    # shaders + goldens untouched.
    "shaders/cas.frag.hlsl:ps"
    # Screen-Space Contact Shadows (Slice CT): reuses the SSAO/SSR/GTAO g-buffer (view normal + linear
    # depth). contact_shadows.frag reconstructs the view position (like gtao.frag), marches a SHORT ray
    # TOWARD the sun through the depth field (render/contact_shadows.h RayMarchShadow mirrored in-shader)
    # with a baked per-pixel dither, and outputs the single-channel contact-shadow factor; the NEW
    # lit_contactshadow.frag (a lit.frag VARIANT) samples that factor at the pixel's screen position and
    # MULTIPLIES the direct sun radiance by it (ambient/IBL/point lights untouched, like the CSM term).
    # Fullscreen factor pass (reuses post.vert), behind --contactshadow-shot ONLY; with maxDist==0 the
    # march takes no steps -> factor==1 -> byte-identical to the no-contact render. Existing lit/gtao/ssao
    # shaders + their goldens untouched.
    "shaders/contact_shadows.frag.hlsl:ps"
    "shaders/lit_contactshadow.frag.hlsl:ps"
    # DDGI GI Composite — DDGI Slice 5 (Slice DN): a SIBLING of lit.frag that adds a single-bounce DDGI
    # indirect-diffuse term as the LAST contribution. Per pixel it trilinearly blends the 8 nearest probes'
    # 3rd-order real-SH irradiance (NearestProbes + InterpolateSH + SHEvaluate copied VERBATIM from
    # engine/render/probe_gi.h + probe_sh.h, mad for every accumulation) toward the surface normal and adds
    # indirect*albedo*(1-metallic)*giStrength -> colored Cornell color bleed. The ProbeSH[] rides in a
    # fragment-stage storage buffer bound via the EXISTING usesLightClusters/BindLightClusters path (binding
    # 13/space3, single SSBO via dummies) — NO new RHI. giStrength==0 (or probeCount=0) -> the indirect term
    # is a literal +0.0 -> byte-identical to the no-GI render. Used ONLY by --ddgi-shot; lit.frag + its
    # goldens are untouched.
    "shaders/lit_ddgi.frag.hlsl:ps"
    # DDGI Visibility Slice 2 — Chebyshev occlusion-weighted GI composite (Slice DP): a SIBLING of
    # lit_ddgi.frag that weights each of the 8 nearest probes' SH contribution by a per-probe Chebyshev
    # (variance-shadow) visibility weight read from DO's per-probe distance-moment cube (DistDirToFaceUV +
    # SampleProbeMoments copied VERBATIM from engine/render/probe_dist.h), so a probe geometrically occluded
    # from a surface stops bleeding indirect light through the occluder (the DDGI light-leak fix). ProbeSH
    # binds at set-3 binding 13 (slot 0, as DN) + the distance moments at the next free slot binding 14 via
    # the EXISTING BindLightClusters path — NO new RHI. occlusionStrength==0 branches to the VERBATIM DN path
    # -> frame A byte-identical to the DN lit_ddgi render. Used ONLY by --ddgiocc-shot; lit_ddgi.frag +
    # lit.frag + their goldens untouched.
    "shaders/lit_ddgi_occ.frag.hlsl:ps"
    # DDGI MULTI-BOUNCE capture-with-GI fragment (Slice DR): a SIBLING of probe_bake.frag.hlsl (the DI
    # probe-radiance capture) with the DN lit_ddgi InterpolateIrradianceSH indirect term added LAST, so
    # the bounce-1 capture sees the 1st-bounce GI -> SH-encoding it yields SH1 (the 2nd bounce). SH0 binds
    # at set-3 binding 13 via the EXISTING usesLightClusters/BindLightClusters path; the grid params ride
    # the same 208-byte lit_ddgi FrameData UBO. Used ONLY by the bounce-1 capture in --ddgimb-shot;
    # probe_bake.frag + lit_ddgi.frag + lit.frag + their goldens stay byte-identical (sibling isolation).
    "shaders/probe_bake_gi.frag.hlsl:ps"
    # Screen-space global illumination (Slice BP): reuses the SSAO/SSR g-buffer (view normal + linear
    # depth) + the lit HDR scene. ssgi.frag traces K cosine-hemisphere rays per pixel and marches them
    # (the SAME view-space march + binary-search as ssr.frag), sampling the lit scene as indirect
    # diffuse radiance; ssgi_composite ADDS indirect*albedo over the scene + tonemaps. Existing
    # gbuffer/ssao/ssr/bloom shaders + their goldens untouched.
    "shaders/ssgi.frag.hlsl:ps"
    "shaders/ssgi_composite.frag.hlsl:ps"
    # SSGI spatial denoise (Slice BR): a depth+normal-guided BILATERAL blur of the SSGI indirect buffer
    # (same NxN fullscreen shape as ssao_blur, but each tap weighted by the G-buffer edge-stop) — smooths
    # the floor color-bleed pool while keeping the bleed crisp at edges. Inserted on the SSGI path before
    # ssgi_composite, behind --ssgi-denoise-shot ONLY; the raw --ssgi-shot path + ssgi.png stay unchanged.
    "shaders/ssgi_denoise.frag.hlsl:ps"
    # Temporal SSGI accumulation (Slice BV): a running-mean accumulation pass that folds N=8 jittered
    # SSGI indirect frames (each a golden-angle-rotated hemisphere kernel, via ssgi.frag's `frame` param)
    # into an HDR accumulation RT, then composites the mean like BP. Inserted on the --ssgi-temporal-shot
    # path ONLY; the raw --ssgi-shot + spatial --ssgi-denoise-shot paths + their goldens stay unchanged.
    "shaders/ssgi_accum.frag.hlsl:ps"
    # Volumetric fog / light shafts (Slice AJ): reuses the directional shadow map + SSAO g-buffer;
    # volumetric.frag ray-marches the view ray sampling the shadow map per step for in-scattering,
    # volumetric_composite adds it over the scene + tonemaps. Existing shaders + goldens untouched.
    "shaders/volumetric.frag.hlsl:ps"
    "shaders/volumetric_composite.frag.hlsl:ps"
    # Volumetric clouds (Slice CH): a raymarched cumulus LAYER in the sky dome. clouds.frag
    # reconstructs the view ray (like sky.frag), intersects the cloud SLAB, ray-marches density
    # (render/clouds.h math, mirrored in-shader) with a short secondary light-march (Beer-Lambert) +
    # a Henyey-Greenstein phase, masked to the sky background via the SSAO g-buffer depth;
    # clouds_composite blends lerp(scene, cloud.rgb, cloud.a) + tonemaps. DISTINCT from volumetric fog.
    # Existing sky/scene/volumetric shaders + goldens untouched (new path behind --clouds-shot).
    "shaders/clouds.frag.hlsl:ps"
    "shaders/clouds_composite.frag.hlsl:ps"
    # Cloud shadows on the ground (Slice CK): a VARIANT of lit.frag that ADDITIONALLY attenuates the
    # direct sun by the cloud-shadow transmittance (render/clouds.h CloudShadow, mirrored in-shader) —
    # the surface samples the SAME CH cloud field along the ray toward the sun, casting dappled cloud
    # shadows on the scene. Reuses lit.vert (push constant extended with the cloud slab/time/steps).
    # Used ONLY by --cloud-shadows-shot; lit.frag + its goldens are byte-identical (new path).
    "shaders/lit_cloudshadow.frag.hlsl:ps"
    # Reflection + irradiance probes (Slice AK): bake the local room into a cube atlas (reflection
    # block) + cosine-convolve an irradiance block, then shade with lit_probe sampling that atlas as
    # LOCAL GI. Reuses lit.vert + the CSM depth-only caster's vertex (probe-face VP in push const) and
    # post.vert for the blit/convolution fullscreen passes. Existing shaders + goldens untouched.
    "shaders/probe_bake.vert.hlsl:vs"
    "shaders/probe_bake.frag.hlsl:ps"
    "shaders/lit_probe.frag.hlsl:ps"
    "shaders/probe_blit.frag.hlsl:ps"
    "shaders/probe_irradiance.frag.hlsl:ps"
    # Box-Projected Cubemap Reflections (Slice DA): a reflective-surface variant of lit_probe.frag that
    # parallax-corrects the specular reflection direction to the local probe BOX (render/reflection_probe.h
    # ray-box exit + box-project, copied verbatim) before sampling the EXISTING reflection cubemap, so the
    # reflected room walls line up with the geometry. parallaxStrength=0 -> byte-identical to the plain
    # probe reflection. Reuses the probe bake/blit/irradiance pipeline + post.vert. Existing shaders +
    # goldens untouched.
    "shaders/reflprobe.frag.hlsl:ps"
    # Runtime cubemap-capture reflection probe (Slice DD): the reflective surface samples a CAPTURED
    # hardware TextureCube (the scene rendered into 6 cube faces from the probe center, via the new
    # additive cubemap-RT RHI interface) box-projected by DA's reflprobe math. The dynamic counterpart
    # to DA's static env reflection. Reuses probe_bake.{vert,frag} for the capture + post.vert.
    # Existing shaders + goldens untouched.
    "shaders/captureprobe.frag.hlsl:ps"
    # Planar reflections (Slice DE): the MIRROR-SURFACE fragment. Shades the flat reflective floor with
    # lit.frag's matte Cook-Torrance result, then blends lerp(matte, reflectionSample, reflectivity) —
    # the reflection RT being the scene rendered through the camera reflected across the mirror plane
    # (render::planar's ReflectionMatrix + oblique near-clip + winding flip), sampled at the pixel's own
    # screen UV. reflectivity=0 -> byte-identical to the matte render (the reflection RT is never read).
    # Reuses lit.vert (unchanged). Existing shaders + goldens untouched.
    "shaders/planar.frag.hlsl:ps"
    # Temporal anti-aliasing (Slice AP): the resolve pass — neighborhood-clamped history blend over the
    # current jittered HDR scene. Reuses post.vert (fullscreen triangle) + the existing RT/RGBA16F path;
    # the only new shader for the slice. Existing post/bloom/ssao/ssr shaders + goldens untouched.
    "shaders/taa_resolve.frag.hlsl:ps"
    # GPU-driven culling + indirect draw (Slice AR): a compute kernel frustum-culls a 1024-instance
    # grid and ORDER-compacts the survivors + writes the indirect draw-args; reuses lit_instanced.vert
    # for the indirect draw. Existing shaders + goldens untouched.
    "shaders/cull.comp.hlsl:cs"
    # Fully-GPU-driven-CULLED pass (Slice CD): a compute kernel frustum-culls the FULL per-draw list and
    # ORDER-compacts the survivors into the GpuDrivenPerDraw SSBO + the MDI command buffer + writes the
    # survivor count; the host reads the count back and issues ONE DrawIndexedMultiIndirect(count) over
    # lit_gpudriven.{vert,frag}. Composes AR (cull+compact) + BM (MDI) + BZ (bindless) + CB (combined
    # per-draw). Existing shaders + goldens untouched.
    "shaders/gpudriven_cull.comp.hlsl:cs"
    # Virtual-geometry per-CLUSTER frustum cull (Slice DT): a NEAR-COPY of gpudriven_cull.comp with the
    # (instance x cluster) record as the unit (a DS cluster is just an object with a per-cluster bounding
    # sphere). One thread/cluster-instance: SphereOutside (copied VERBATIM) -> ORDERED single-workgroup
    # prefix-sum compaction into the MdiCommand buffer + the compacted (model+color) per-draw SSBO +
    # survivor count. cluster_viz.vert is the MDI variant of meshlet_viz.vert (reads PerDraw[gl_DrawID]
    # model+color instead of a push constant); the shared meshlet_viz.frag is the flat-color pass. CPU
    # mirror: render/cluster_cull.h. NO new RHI; existing shaders + goldens untouched.
    "shaders/cluster_cull.comp.hlsl:cs"
    "shaders/cluster_viz.vert.hlsl:vs"
    # Virtual-geometry per-CLUSTER Hi-Z OCCLUSION cull (Slice DU): DT's cluster_cull.comp PLUS CJ's
    # hiz_cull.comp occlusion test. After the frustum test, a frustum-surviving cluster-instance is ALSO
    # tested against a Hi-Z max-depth pyramid (built CPU-side from a depth pre-pass + uploaded; render/hiz.h)
    # and dropped iff its bounding-sphere AABB is fully hidden behind closer geometry; SphereOutside +
    # IsOccluded are copied VERBATIM; SAME ordered single-workgroup prefix-sum compaction. CONSERVATIVE ->
    # occlusion-culled == frustum-only byte-identical. CPU mirror: render/cluster_cull.h::CullClusterInstancesHiZ.
    # NO new RHI; existing shaders + goldens untouched.
    "shaders/cluster_hiz_cull.comp.hlsl:cs"
    # Virtual-geometry discrete cluster-LOD selection (Slice DV): ONE thread/instance computes the squared
    # view distance + SelectLod (copied VERBATIM from render/cluster_lod.h) to pick one of 3 pre-baked LODs
    # by projected screen-space error, then ORDER-compacts the selected LOD's clusters into the MdiCommand
    # buffer + the compacted (model+hashColor) per-draw SSBO + writes the per-instance selected-LOD int (the
    # GPU==CPU bit-exact proof) + the total command count. reuses cluster_viz.vert + meshlet_viz.frag for the
    # draw. CPU mirror: render/cluster_lod.h. NOT in the Metal MSL-gen list (Metal renders the selected set
    # via the CPU bound path; Vulkan carries the GPU==CPU select proof). NO new RHI; goldens untouched.
    "shaders/cluster_lod_select.comp.hlsl:cs"
    # Hi-Z OCCLUSION cull (Slice CJ): extends gpudriven_cull with a hierarchical-Z occlusion test —
    # after the frustum test, an object FULLY HIDDEN behind closer geometry (its screen-rect nearest
    # depth farther than the Hi-Z max everywhere it covers) is dropped from the compacted survivors.
    # The Hi-Z pyramid is built CPU-side (render/hiz.h) from a depth pre-pass + uploaded; the shader
    # runs the SAME IsOccluded math. Render-invariant: occlusion-culled == frustum-only byte-identical.
    "shaders/hiz_cull.comp.hlsl:cs"
    # Clustered Light Culling (Slice CL): cluster_assign.comp assigns each point light to the clusters
    # its hard-radius view-sphere intersects (the SAME ClusterViewAABB + SphereAABBIntersect math as
    # engine/render/cluster.h), writing a DETERMINISTIC ORDERED per-cluster light list. lit_clustered_cl
    # is the clustered lit variant (windowed hard-radius point lights on top of the default sun+IBL),
    # asserted BYTE-IDENTICAL to a brute-force all-lights render. Distinct from Slice AG's clustered
    # path; separate golden (clustered_lights.png); existing shaders + goldens untouched.
    "shaders/cluster_assign.comp.hlsl:cs"
    "shaders/lit_clustered_cl.frag.hlsl:ps"
    # GPU multi-draw-indirect batching (Slice BM): the MDI lit vertex shader reads the per-draw model
    # matrix + material from a storage buffer indexed by gl_DrawID (SPIR-V DrawIndex). VULKAN-ONLY (the
    # DrawIndex builtin needs shaderDrawParameters); shares the existing lit.frag. Not in the Metal MSL
    # gen list (glslc can't lower DrawIndex; the Metal golden uses the per-object path).
    "shaders/lit_mdi.vert.hlsl:vs"
    # Bindless textures (Slice BZ): the bindless lit vertex (lit.vert + a uint texIndex push constant
    # passed flat to the fragment) + fragment (lit.frag with the base-color source swapped for an
    # unbounded gTextures[] array sampled via NonUniformResourceIndex(texIndex), space4). VULKAN-ONLY
    # (DXC emits SPV_EXT_descriptor_indexing / runtimeDescriptorArray); the Metal golden renders the
    # identical scene via the per-material bound path. Not in the Metal MSL gen list.
    "shaders/lit_bindless.vert.hlsl:vs"
    "shaders/lit_bindless.frag.hlsl:ps"
    # Fully-GPU-driven pass (Slice CB, MDI + bindless capstone): the GPU-driven lit vertex reads the
    # per-draw model+material+texIndex from a storage buffer indexed by gl_DrawID (SPIR-V DrawIndex, BM)
    # and passes texIndex flat; the fragment samples the base color from the unbounded gTextures[] array
    # via NonUniformResourceIndex(texIndex) (SPV_EXT_descriptor_indexing, BZ). ONE DrawIndexedMultiIndirect
    # + ONE BindBindlessTextures draws the whole multi-material scene. VULKAN-ONLY (DXC emits BOTH
    # DrawParameters AND descriptor-indexing); the Metal golden renders the identical scene via the
    # per-object bound path. Not in the Metal MSL gen list (glslc can't lower DrawIndex).
    "shaders/lit_gpudriven.vert.hlsl:vs"
    "shaders/lit_gpudriven.frag.hlsl:ps"
    # Screen-space projected decals (Slice BH): reuses the SSAO/SSR g-buffer (view normal + linear
    # depth) + the lit HDR scene. decal.frag reconstructs the world position (view-space recon like
    # SSR, then view->world via invView), projects it into the decal box, and alpha-blends the decal
    # texture over the scene + tonemaps. Existing gbuffer/ssao/ssr/bloom shaders + goldens untouched.
    "shaders/decal.frag.hlsl:ps"
    # Data-driven post-process stack (Slice BN): the configurable ORDERED composite chain. A SEPARATE
    # final pass from post.frag (the default --shot post path is byte-identical + untouched). Reuses
    # post.vert (fullscreen triangle); applies the configured effects (tonemap/colorgrade/chromatic/
    # vignette/grain) in order from a push-constant effect list. Shared math with engine/render/post_stack.h.
    "shaders/post_stack.frag.hlsl:ps"
    # Froxel Volumetric Fog (Slice CS): a true 3D view-space froxel volume (inject -> integrate ->
    # depth-composited apply). froxel_inject.comp writes per-froxel (scatter, extinction) from the
    # render/froxel.h height-density + HG phase; froxel_integrate.comp marches each Z column front-to-back
    # via IntegrateStep into (inScatter, transmittance); froxel_apply.frag (fullscreen, reuses post.vert)
    # samples the integrated volume at each pixel's view-depth slice (ViewZToSlice) and composites
    # scene*T + inScatter. The volume is a FLAT SSBO (no new RHI seam). With baseDensity==0 the apply is a
    # pure pass-through (T==1, inScatter==0) -> byte-identical to the no-fog scene. New golden
    # froxel_fog.png; existing shaders + goldens untouched (incl. the 2D light-shaft volumetric.png).
    "shaders/froxel_inject.comp.hlsl:cs"
    "shaders/froxel_integrate.comp.hlsl:cs"
    "shaders/froxel_apply.frag.hlsl:ps"
    # Probe-Grid Ray-Trace — DDGI beachhead (Slice DH): one thread per probe traces 16 deterministic
    # Fibonacci-sphere rays against the scene's view-space depth field (a FLAT float SSBO read back from
    # the G-buffer, NOT a sampled depth texture) into a flat ProbeRayHit SSBO. FibonacciSphere +
    # ViewToScreenUV/ReconstructViewPos + TraceRayToDepth are copied VERBATIM from engine/render/probe_gi.h
    # (+ ssr.h), so the GPU ray-hit SSBO is BIT-EXACT to the CPU reference over the same depth field. Pure
    # compute + storage buffers (no new RHI seam). The probeCount=0 dispatch-0 leaves the SSBO untouched.
    "shaders/probe_raytrace.comp.hlsl:cs"
    # Probe SH-Encode — DDGI Slice 3 (Slice DJ): one thread per probe loops the FIXED host-precomputed
    # sample set (per cube-texel: the 9 SHBasis9 weights + the solid-angle weight, computed once on the
    # host), reads the captured radiance at each sample from the flat radiance store, and accumulates it
    # into 3rd-order real-SH coefficients (SHEncodeAccumulate/SHNormalize copied VERBATIM from
    # engine/render/probe_sh.h), writing the per-probe ProbeSH SSBO. Because the sample basis weights +
    # solid-angle weights are uploaded as exact bits the GPU + CPU read identically, the GPU SH SSBO is
    # BIT-EXACT to the CPU SH-encode. Pure compute + storage buffers (no new RHI seam). The probeCount=0
    # dispatch-0 leaves the SH SSBO untouched == the cleared upload.
    "shaders/probe_sh_encode.comp.hlsl:cs"
    # Probe Trilinear SH-Interp — DDGI Slice 4 (Slice DL): one thread per QUERY point trilinearly blends
    # the 8 surrounding probes' SH at the query's world position into a single ProbeSH. NearestProbes (the
    # FLOOR-cell 8 corners + polynomial weights) + InterpolateSH (the per-corner fma SH accumulation) are
    # copied VERBATIM from engine/render/probe_gi.h + probe_sh.h (mad for the per-corner product), so the
    # GPU blended-SH SSBO is BIT-EXACT to the CPU InterpolateSH reference. Pure compute + storage buffers
    # (no new RHI seam). The probeCount=0 dispatch-0 leaves the output SSBO untouched == the cleared upload.
    "shaders/probe_interp.comp.hlsl:cs"
    # Per-Probe Distance-Moment Capture — DDGI Visibility Slice 1 (Slice DO): the VISIBILITY data layer.
    # probe_dist.vert is a probe_bake.vert clone that passes the world position + carries probeCentre in the
    # push constant; probe_dist.frag outputs the linear world-distance d = length(worldPos - probeCentre)
    # packed as the two moments float2(d, d*d) (d*d a BARE multiply so it is bit-identical to the CPU
    # reference probedist::MomentsFromDistance). Pure geometry (no lighting), captured into the DD cube RT +
    # read back into a per-probe distance-moment store (the data the next slice DP, Chebyshev occlusion,
    # consumes to kill DDGI leak). Behind --probedist-shot ONLY; lit.frag + every existing pipeline + golden
    # stay byte-identical. NO new RHI (reuses DD's ICubemapTarget / Begin-EndCubemapFace / ReadCubemapFace).
    "shaders/probe_dist.vert.hlsl:vs"
    "shaders/probe_dist.frag.hlsl:ps"
    # Auto-Exposure (Slice CW): histogram eye adaptation. autoexposure_histogram.comp reads the HDR scene
    # color (flat float4 SSBO), computes the Rec.709 Luminance, maps it to a log2-luminance bin via
    # render/auto_exposure.h::LumToBin, and InterlockedAdd(histogram[bin],1) into a bins-entry INTEGER SSBO
    # (order-independent counts -> deterministic). autoexposure_reduce.comp reduces the histogram ->
    # AverageLuminance (black-bin excluded) -> ExposureFromAverage (key-value) -> writes the single exposure
    # float (gated by adaptationEnabled: when false it writes the fixed E0). tonemap_autoexp.frag is the
    # post.frag tonemap with the fixed kExposure replaced by that exposure SSBO value (read via the cluster
    # binding 13/space3 — no new RHI seam). With adaptationEnabled=false the exposure is E0 -> byte-identical
    # to the standard fixed-exposure tonemap. New golden auto_exposure.png; existing post.frag + goldens
    # untouched (a NEW path behind --autoexposure-shot).
    "shaders/autoexposure_histogram.comp.hlsl:cs"
    "shaders/autoexposure_reduce.comp.hlsl:cs"
    "shaders/tonemap_autoexp.frag.hlsl:ps"
)
target_compile_definitions(hello_triangle PRIVATE
  "HF_SHADER_DIR=\"${SHADER_OUT}\"")
# Slice AW: absolute paths to the material graphs the live/runtime path loads + recompiles at runtime.
target_compile_definitions(hello_triangle PRIVATE
  "HF_MAT_JSON=\"${MAT_JSON}\""
  "HF_MAT2_JSON=\"${MAT2_JSON}\""
  "HF_MAT3_JSON=\"${MAT3_JSON}\""
  "HF_MATNORMAL_JSON=\"${MATNORMAL_JSON}\"")
# Absolute path to the glTF showcase model, baked at configure time (repo asset).
target_compile_definitions(hello_triangle PRIVATE
  "HF_MODEL_PATH=\"${CMAKE_SOURCE_DIR}/assets/models/Duck.glb\"")
# Absolute path to the skinned-animation showcase model (Fox.glb: 24-joint skin + animations).
target_compile_definitions(hello_triangle PRIVATE
  "HF_FOX_MODEL_PATH=\"${CMAKE_SOURCE_DIR}/assets/models/Fox.glb\"")
# Absolute path to the full-PBR showcase model (DamagedHelmet.glb: 5-texture metallic-roughness PBR).
target_compile_definitions(hello_triangle PRIVATE
  "HF_HELMET_MODEL_PATH=\"${CMAKE_SOURCE_DIR}/assets/models/DamagedHelmet.glb\"")
# Absolute path to the scene-graph import showcase model (CesiumMilkTruck.glb: node hierarchy +
# multiple meshes/materials; the wheels mesh is placed at two positions via two parent transforms).
target_compile_definitions(hello_triangle PRIVATE
  "HF_TRUCK_MODEL_PATH=\"${CMAKE_SOURCE_DIR}/assets/models/CesiumMilkTruck.glb\"")
# Absolute path to the default data-driven scene description (repo asset).
target_compile_definitions(hello_triangle PRIVATE
  "HF_SCENE_PATH=\"${CMAKE_SOURCE_DIR}/assets/scenes/default.json\"")
# Absolute path to the HDR equirectangular environment map (Slice R: kloofendal clear sky, 1k).
target_compile_definitions(hello_triangle PRIVATE
  "HF_ENV_PATH=\"${CMAKE_SOURCE_DIR}/assets/env/env.hdr\"")
